changes to fix glass effect not working on mobile profuction, change hover for not work on mobile

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -31,10 +31,14 @@ html {
   }
   a,
   button {
-    @media (hover: hover) {
+    &:hover,
+    &:focus {
+      color: rgba(56, 89, 197, 0.8);
+    }
+    @media (hover: none) {
       &:hover,
       &:focus {
-        color: rgba(56, 89, 197, 0.8);
+        color: inherit;
       }
     }
   }
